--- a/about.html
+++ b/about.html
@@ -23,25 +23,23 @@
       </a>
       <nav>
         <ul>
-          <li><a href="index.html" class="selected">Pagina Principal</a></li>
-          <li><a href="about.html">Teams</a></li>
+          <li><a href="index.html">Pagina Principal</a></li>
+          <li><a href="about.html" class="selected">Teams</a></li>
           <li><a href="contact.html">Torneos</a></li>
         </ul>
       </nav>
     </header>
-    <div id="base">
-      <section id="gallery">
-        <form id="registrar">
-        <h1>Ganadores Ultimo Torneo</h1>
-        </form>
-        <!-- <img src="img/image01.jpg" alt=""> -->
+    <div id="wrapper">
+      <section>
+        <img src="img/nick.jpg" alt="Photograph of Nick Pettit" class="profile-photo">
+        <h3>About</h3>
+        <p>Hi, I'm Nick Pettit! This is my design portfolio where I share all of my favroite work. When I'm not designing things, I enjoy exercising, playing video games, drinking good coffee, and more.</p>
+        <p>If you'd like to follow me on Twitter, my username is <a href="http://twitter.com/nickrp">@nickrp</a>.</p>
       </section>
       <footer>
-        <a href="#"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
-        <a href="#"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
-        <a href="#"><img src="img/phone.png" alt="Phone" class="social-icon"></a>
-        <a href="#"><img src="img/mail.png" alt="Mail" class="social-icon"></a>
-        <p>&copy; CopyRight 2014 Trqueros de Monagas</p>
+        <a href="http://twitter.com/nickrp"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
+        <a href="http://facebook.com/nickpettit"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
+        <p>&copy; Truqueros de Monagas</p>
       </footer>
     </div>
   </body>
